test_suite/tests/compile_error_cases/duplicate_attr.rs
#[moq::automock]
trait Trait {
    #[moq(default = "i32", default = "i64")]
    type Type;
}

fn main() {}
